--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,1 +1,7 @@
-export OPENSHIFT_POSTGRESQL_DATASOURCE=magicCubeManagerDS
+#!/bin/bash
+# This is a simple build script and will be executed on your CI system if 
+# available.  Otherwise it will execute while your application is stopped
+# before the deploy step.  This script gets executed directly, so it
+# could be python, php, ruby, etc.
+
+export OPENSHIFT_POSTGRESQL_DATASOURCE="magicCubeManagerDS"
